MCU_workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:13:51 **** Build of configuration Debug for project stm32f4xx_drivers ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc" -include"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc/stm32f407xx.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc" -include"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc/stm32f407xx.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc" -include"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc/stm32f407xx.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc "../Drivers/Src/delay.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc" -include"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc/stm32f407xx.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/Src/delay.d" -MT"Drivers/Src/delay.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/Src/delay.o"
arm-none-eabi-gcc "../Drivers/Src/stm32f407xx_gpio.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc" -include"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc/stm32f407xx.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/Src/stm32f407xx_gpio.d" -MT"Drivers/Src/stm32f407xx_gpio.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/Src/stm32f407xx_gpio.o"
arm-none-eabi-gcc "../Drivers/Src/stm32f407xx_i2c.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc" -include"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc/stm32f407xx.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/Src/stm32f407xx_i2c.d" -MT"Drivers/Src/stm32f407xx_i2c.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/Src/stm32f407xx_i2c.o"
arm-none-eabi-gcc "../Drivers/Src/stm32f407xx_rcc.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc" -include"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc/stm32f407xx.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/Src/stm32f407xx_rcc.d" -MT"Drivers/Src/stm32f407xx_rcc.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/Src/stm32f407xx_rcc.o"
arm-none-eabi-gcc "../Drivers/Src/stm32f407xx_spi.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc" -include"D:/Project/Self-balancing_1/MCU_workspace/stm32f4xx_drivers/Drivers/Inc/stm32f407xx.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/Src/stm32f407xx_spi.d" -MT"Drivers/Src/stm32f407xx_spi.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/Src/stm32f407xx_spi.o"
../Src/main.c: In function 'I2C1_Inits':
../Src/main.c:61:42: error: 'AHT20_I2C_ADDRESS' undeclared (first use in this function)
   61 |         I2C1_Handle.Init.DeviceAddress = AHT20_I2C_ADDRESS;
      |                                          ^~~~~~~~~~~~~~~~~
../Src/main.c:61:42: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c: In function 'main':
../Src/main.c:82:9: warning: implicit declaration of function 'AHT20_Init'; did you mean 'I2C_Init'? [-Wimplicit-function-declaration]
   82 |         AHT20_Init();
      |         ^~~~~~~~~~
      |         I2C_Init
../Src/main.c:86:9: warning: implicit declaration of function 'AHT20_ReadData' [-Wimplicit-function-declaration]
   86 |         AHT20_ReadData();
      |         ^~~~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
